Check mandatory attributes in payload and DB