@@ -37,6 +37,8 @@ import static org.mockito.Mockito.when;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import org.hisp.dhis.common.CodeGenerator;
 import org.hisp.dhis.common.ValueType;
 import org.hisp.dhis.encryption.EncryptionStatus;
@@ -145,9 +147,7 @@ class AttributeValidatorTest {
   }
 
   @Test
-  void
-      shouldPassValidationWhenCreatingEnrollmentAndAttributeIsMandatoryAndValueIsNotPresentInPayloadButPresentInTE() {
-    // given 1 attribute has null value
+  void shouldPassValidationWhenCreatingEnrollmentAndMandatoryAttributeIsPresentOnlyInTE() {
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -155,7 +155,6 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -179,8 +178,8 @@ class AttributeValidatorTest {
   }
 
   @Test
-  void shouldPassValidationWhenUpdatingEnrollmentAndValueIsNotPresentAndAttributeIsMandatory() {
-    // given 1 attribute has null value
+  void
+      shouldReturnErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentOrInTrackedEntityOrInDB() {
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -188,7 +187,71 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
+    when(program.getProgramAttributes())
+        .thenReturn(
+            Arrays.asList(
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute, false, true),
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute1, false, true)));
+
+    when(enrollment.getAttributes()).thenReturn(Collections.singletonList(attribute));
+    when(trackedEntityInstance.getTrackedEntityAttributeValues()).thenReturn(Set.of());
+    when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntityInstance);
+    bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
+
+    validator.validate(reporter, bundle, enrollment);
+
+    assertHasError(reporter, enrollment, ValidationCode.E1018);
+  }
+
+  @Test
+  void
+      shouldReturnNoErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentButPresentInTrackedEntity() {
+    Attribute attribute =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
+    Attribute attribute1 =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute1))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
+    when(program.getProgramAttributes())
+        .thenReturn(
+            Arrays.asList(
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute, false, true),
+                new ProgramTrackedEntityAttribute(program, trackedEntityAttribute1, false, true)));
+
+    when(enrollment.getAttributes()).thenReturn(Collections.singletonList(attribute));
+    when(trackedEntityInstance.getTrackedEntityAttributeValues()).thenReturn(Set.of());
+    when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntityInstance);
+    bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
+    bundle.setTrackedEntities(
+        List.of(
+            org.hisp.dhis.tracker.domain.TrackedEntity.builder()
+                .trackedEntity(enrollment.getTrackedEntity())
+                .attributes(List.of(attribute, attribute1))
+                .build()));
+
+    validator.validate(reporter, bundle, enrollment);
+
+    assertNoErrors(reporter);
+  }
+
+  @Test
+  void
+      shouldReturnNoErrorWhenUpdatingEnrollmentAndMandatoryFieldIsNotPresentInEnrollmentButPresentInDB() {
+    Attribute attribute =
+        Attribute.builder()
+            .attribute(MetadataIdentifier.ofUid(trackedAttribute))
+            .valueType(ValueType.TEXT)
+            .value("value")
+            .build();
+
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -200,9 +263,11 @@ class AttributeValidatorTest {
     when(trackedEntityInstance.getTrackedEntityAttributeValues())
         .thenReturn(
             new HashSet<>(
-                Collections.singletonList(
+                List.of(
+                    new TrackedEntityAttributeValue(trackedEntityAttribute, trackedEntityInstance),
                     new TrackedEntityAttributeValue(
-                        trackedEntityAttribute, trackedEntityInstance))));
+                        trackedEntityAttribute1, trackedEntityInstance))));
+    when(preheat.getTrackedEntity(enrollment.getTrackedEntity())).thenReturn(trackedEntityInstance);
     bundle.setStrategy(enrollment, TrackerImportStrategy.UPDATE);
 
     validator.validate(reporter, bundle, enrollment);
@@ -212,7 +277,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenCreatingEnrollmentAndValueIsNotPresentAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -220,7 +284,6 @@ class AttributeValidatorTest {
             .value("value")
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -244,7 +307,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenCreatingEnrollmentAndValueIsNullAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -257,7 +319,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -282,7 +343,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenUpdatingEnrollmentAndValueIsNullAndAttributeIsMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -295,7 +355,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when both tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -320,7 +379,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldPassValidationWhenValueIsNullAndAttributeIsNotMandatory() {
-    // given 1 attribute has null value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -333,7 +391,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when only 1 tracked attributes is mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -357,7 +414,6 @@ class AttributeValidatorTest {
 
   @Test
   void shouldFailValidationWhenValueIsInvalidPercentage() {
-    // given 1 percentage attribute has invalid value
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -395,7 +451,6 @@ class AttributeValidatorTest {
   @Test
   void
       shouldFailValidationWhenCreatingEnrollmentAndValueIsNullAndAttributeIsMandatoryAndAttributeNotExistsInTei() {
-    // given 1 attribute has null value and does not exists in Te
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -408,7 +463,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when 2 tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
@@ -435,7 +489,6 @@ class AttributeValidatorTest {
   @Test
   void
       shouldFailValidationWhenUpdatingEnrollmentAndValueIsNullAndAttributeIsMandatoryAndAttributeNotExistsInTei() {
-    // given 1 attribute has null value and does not exists in Te
     Attribute attribute =
         Attribute.builder()
             .attribute(MetadataIdentifier.ofUid(trackedAttribute))
@@ -448,7 +501,6 @@ class AttributeValidatorTest {
             .valueType(ValueType.TEXT)
             .build();
 
-    // when 2 tracked attributes are mandatory
     when(program.getProgramAttributes())
         .thenReturn(
             Arrays.asList(
